--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <h3>Trabajo Práctico 1</h3>
                 <a href="index.html"><p class="menu-item">Pagina principal</p></a>
                 <a href="student_list.html"><p>Alumnos</p></a>
+            <!-- test-->
             </section>
             <article>
                     <h2 class="title"">Página Principal</h2>
