se realizo el link modulo alumnos con student_list

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <a href="student_list.html"><p>Alumnos</p></a>
             </section>
             <article>
-                    <h2 class="title"">Página Principal</h2>
-                    <h1 id="card">Módulo Alumnos</h1>
+                    <h2 class="title">Página Principal</h2>
+                    <a href="student_list.html"><h1 id="card">Módulo Alumnos</h1></a>
             </article>
         </section>
     </main>
