se agrego pagination a student_list

--- a/student_list.html
+++ b/student_list.html
@@ -35,7 +35,18 @@
                             <tbody>
                             </tbody>
                         </table>
-                    </div>                 
+                    </div>
+                    <div class="pagination">
+                        <input type="number" name="pag-index" id="pag-index" value="1" readonly>
+                        <select id="pag-options" name="pag-options">
+                          <option value="3">3</option>
+                          <option value="5">5</option>
+                          <option value="10">10</option>
+                          <option value="15">15</option>
+                          <option value="20">20</option>
+                        </select>
+                        <p>Items por pagina: </p>
+                      </div>                 
             </article>           
         </section>
     </main>
