se añadio la logica de pagination y se hicieron otros cambios referidos al estilo en css ademas de cambiar el nombre en los link al formulario y lista por un error de tipeo

--- a/student_form.html
+++ b/student_form.html
@@ -11,28 +11,27 @@
         <section class="flex">
             <section class="menu">
                 <h3>Trabajo Práctico 1</h3>
-                <a href="index.html"><p>Pagina principal</p></a>
-                <a href="students.html"><p class="menu-item">Alumnos</p></a>
+                <a href="index.html"><p>Página principal</p></a>
+                <a href="student_list.html"><p class="menu-item">Alumnos</p></a>
             </section>
             <article>
                 <div class="order-title-button">
                     <h2>Agregar alumnos</h2>
                     <a href="student_list.html"><button id="back-button">Atrás</button></a> 
                 </div>                       
-                    <form>
-                        <div class="form-group">
-                            <label for="name">Nombre:</label>
-                            <label for="surname">Apellido:</label>                         
-                        </div>
-                        <div class="form-group">                   
-                            <input type="text" id="name" name="name" required>                           
-                            <input type="text" id="surname" name="surname" required>                                                               
-                        </div>
-                        <div>
-                            <button class="create-button">Agregar</button>
-                        </div>                       
-                    </form>
-                </div>                
+                <form>
+                    <div class="form-group">
+                        <label for="name">Nombre:</label>
+                        <label for="surname">Apellido:</label>                         
+                    </div>
+                    <div class="form-group">                   
+                        <input type="text" id="name" name="name" required>                           
+                        <input type="text" id="surname" name="surname" required>                                                               
+                    </div>
+                    <div>
+                        <button class="create-button">Agregar</button>
+                    </div>                       
+                </form>
             </article>           
         </section>
     </main>
